# ManagmentGameQT

./: .gitignore  CMakeLists.txt  README.md  RELEASES.md  full_code.txt
include/controller/: chatController.h  clientController.h  mainController.h  message_types.h  networkController.h  serverController.h
include/model/: gameModel.h  gameSession.h  playerModel.h
include/ui/: mainWindow.h
include/ui/mainGameWindow/: chatWidget.h  headerWidget.h  leftBarWidget.h  mainGameScreen.h  playerWidget.h
include/ui/menu/: menu.h  menuWidget.h
src/: main.cpp
src/controller/: chatController.cpp  clientController.cpp  mainController.cpp  networkController.cpp  serverController.cpp
src/model/: gameSession.cpp  gamemodel.cpp  playerModel.cpp
src/ui/: mainWindow.cpp
src/ui/mainGameWindow/: chatWidget.cpp  headerWidget.cpp  leftbarWidget.cpp  mainGameScreen.cpp  playerWidget.cpp
src/ui/menuWindow/: menu.cpp  menuWidget.cpp
